WEB-3003 fix social media gap

--- a/app/components/footer/footer.less
+++ b/app/components/footer/footer.less
@@ -21,6 +21,7 @@
 
   &.social-media {
     display: flex;
+    gap: 20px;
   }
 
   &.large-format-only {
@@ -53,18 +54,4 @@
   img {
     margin: 0 12px;
   }
-}
-
-@imgHeight: 32px;
-
-.footer-twitter {
-  width: 44.8px;
-  height: @imgHeight;
-}
-
-.footer-facebook {
-  width: 32px;
-  height: @imgHeight;
-
-  margin-left: 20px;
 }
